--- a/2_Control/9.dog_Ctrl.ipynb
+++ b/2_Control/9.dog_Ctrl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7236a112-d581-431e-9583-c2675a3eb700",
    "metadata": {},
    "outputs": [],
@@ -19,10 +19,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "14151f60-773f-4375-82e5-b367596ba2a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'DOGZILLALib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Dogzilla drive library\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mDOGZILLALib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DOGZILLA\n\u001b[32m      3\u001b[39m g_dog = DOGZILLA()\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'DOGZILLALib'"
+     ]
+    }
+   ],
    "source": [
     "# Dogzilla drive library\n",
     "from DOGZILLALib import DOGZILLA\n",
@@ -40,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "782f795b-4010-4b8b-a258-5ab391308a9e",
    "metadata": {},
    "outputs": [],
@@ -94,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b23b6e86-5a3b-4e0b-9d10-9dfce52eed87",
    "metadata": {},
    "outputs": [],
@@ -106,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "12ed969a-763f-45c8-b4b4-597e87220c96",
    "metadata": {},
    "outputs": [
@@ -136,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7fe5eace-e1b7-4777-bc4d-9bc1161f33de",
    "metadata": {},
    "outputs": [],
@@ -161,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a40bef51-8a22-4156-a137-1773b8acc171",
    "metadata": {},
    "outputs": [],
@@ -184,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "911b9ee9-2e14-4d0e-9ea5-b23d56490111",
    "metadata": {},
    "outputs": [],
@@ -256,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "51e2aa10-f814-4faa-b229-bd1e3e456766",
    "metadata": {},
    "outputs": [],
@@ -300,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "8fb589bb-feac-48dd-9ffb-1e27466eb076",
    "metadata": {},
    "outputs": [],
@@ -316,7 +328,7 @@
     "    button_forward.icon = 'uncheck'\n",
     "    button_backward.icon = 'uncheck'\n",
     "    button_move_left.icon = 'uncheck'\n",
-    "    button_move_right.icon = 'uncheck'\n",
+    "    button_move_right.icon = 'uncheck'a\n",
     "    button_turn_left.icon = 'uncheck'\n",
     "    button_turn_right.icon = 'uncheck'\n",
     "    \n",
@@ -335,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a46b8906-5bd9-4aaa-abcc-4a7732c699d4",
    "metadata": {},
    "outputs": [],
@@ -400,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a0daf657-e07c-4d98-a3e3-819a6dc60ce2",
    "metadata": {},
    "outputs": [],
@@ -464,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "0db73603-bfea-4c58-86db-9e74c01ae782",
    "metadata": {},
    "outputs": [],
@@ -549,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "d6ee37d3-39b2-4392-af25-8632dbced3e7",
    "metadata": {},
    "outputs": [],
@@ -692,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "31b1f9f6-0ddb-4352-bb92-5baaedcc679a",
    "metadata": {},
    "outputs": [],
@@ -736,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "0df02114-8a24-4559-b6fb-0197950f59b5",
    "metadata": {},
    "outputs": [],
@@ -767,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "1275cd5c-067b-4a06-be88-45b7f3126513",
    "metadata": {},
    "outputs": [
@@ -826,7 +838,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -840,7 +852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
